# bootsmith

./: .gitignore  README.md  pyproject.toml
profiles/: CRCS-m2lab-sim.json  CRCS-sim8.json  GMOSCC-sim8.json  GNIRSCC-sim8.json  MKO-PROD-AG.json  MKO-PROD-CRCS.json  MKO-PROD-GMOSCC.json  MKO-PROD-GNIRSCC-m2lab.json  MKO-PROD-GNIRSCC.json  MKO-PROD-HRWFS.json  MKO-PROD-PCS-m2-lab.json  MKO-PROD-PCS.json  MKO-PROD-PWFS2.json  MKO-PROD-SCS.json  MKO_PROD-OIWFS.json  MKO_PROD-PWFS1.json  PWFS1-sim8.json  PWFS2-sim8.json  README.md
scripts/: fake_wti.py  run.sh
src/bootsmith/: __init__.py  __main__.py  app.py  patterns.py  ppcbug.py  profiles.py  schemas.py  session.py  transport.py  vxworks.py  watcher.py  wsgi.py
src/bootsmith/static/: style.css
src/bootsmith/templates/: _params_actions.html  _params_booting.html  _params_cnfg.html  _params_cnfg_done.html  _params_cnfg_running.html  _params_diag.html  _params_diag_form.html  _params_edit.html  _params_edit_section.html  _params_form.html  _params_push.html  _params_running.html  _params_table.html  _params_verify.html  _profile_form_fields.html  _profile_list.html  _session.html  index.html
tests/: test_ppcbug.py  test_vxworks.py  test_watcher.py
