[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootsmith"
version = "0.1.0"
description = "GUI for editing VME boot parameters (PPCBug / Tornado VxWorks) over WTI serial."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
bootsmith = "bootsmith.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bootsmith = ["templates/*.html", "static/*"]
